maquetado a presentar [Lunes-02/11/2025]

--- a/frontend/src/components/ComunidadGuardada/ComunidadGuardada.module.css
+++ b/frontend/src/components/ComunidadGuardada/ComunidadGuardada.module.css
@@ -1,20 +1,29 @@
-
 /* ===== Utilidades del Archivo ===== */
 /* === Pensado para todas las resoluciones ===*/
 /* ===== Idealmente ===== */
 .block {
     height: 5%;
     width: 100%;
-    margin-top: 2vh;
-    padding: 4px 0;
+    padding: 10px 0;
+    padding-left: 15px;
     background-color: transparent;
     transition: background-color 0.4s ease, transform 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border-bottom: 1px solid #212121;
 }
 
 .block:hover {
-    background-color: rgb(66, 44, 105);
+    background-color: #E0E0E0;
     transform: scale(1.02);
     cursor: pointer;
+}
+
+.icon {
+    height: 2rem;
+    width: 1.5rem;
+    object-fit: contain;
 }
 
 .center_text {
@@ -23,7 +32,7 @@
 
 .text {
     margin: 0;
-    margin-left: 30px;
+    margin-left: 5px;
     padding: 0;
 }
 
@@ -34,7 +43,7 @@
 }
 
 .black_text {
-    color: black;
+    color: #212121;
     font-size: 1.25vw;
     font-weight: bold;
 }
