--- a/frontend/src/components/Comunidades/Comunidades.module.css
+++ b/frontend/src/components/Comunidades/Comunidades.module.css
@@ -4,20 +4,20 @@
 /* ===== Idealmente ===== */
 .container {
     height: 5%;
-    width: 80%;
+    width: 100%;
 }
 
 .block {
     height: 5%;
     width: 100%;
-    margin-top: 2vh;
     padding: 8px 0;
     background-color: transparent;
     transition: background-color 0.4s ease, transform 0.3s ease;
+    border-bottom: 1px solid #212121;
 }
 
 .block:hover {
-    background-color: rgb(66, 44, 105);
+    background-color: #E0E0E0;
     transform: scale(1.02);
     cursor: pointer;
 }
@@ -28,7 +28,7 @@
 
 .text {
     margin: 0;
-    margin-left: 10px;
+    margin-left: 20px;
     padding: 0;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .black_text {
-    color: black;
+    color: #212121;
     font-size: 1.25vw;
     font-weight: bold;
 }
