--- a/frontend/src/components/EmergenciaPublicacion/EmergenciaPublicacion.module.css
+++ b/frontend/src/components/EmergenciaPublicacion/EmergenciaPublicacion.module.css
@@ -3,13 +3,13 @@
 /* === Pensado para todas las resoluciones ===*/
 /* ===== Idealmente ===== */
 .post {
-    height: 60vh;
+    height: auto;
     width: 100%;
     max-width: 500px;
     margin: 2vh auto;
     padding: 1rem;
     border-radius: 1rem;
-    box-shadow: 0 4px 10px rgb(128, 128, 128);
+    box-shadow: 0 4px 10px #C84B31;
     background-color: white;
     display: flex;
     flex-direction: column;
