--- a/frontend/src/components/Comunidades/Comunidad.module.css
+++ b/frontend/src/components/Comunidades/Comunidad.module.css
@@ -1,29 +1,26 @@
+
 /* ===== Utilidades del Archivo ===== */
 /* === Pensado para todas las resoluciones ===*/
 /* ===== Idealmente ===== */
+.container {
+    min-height: 40px;
+    width: 100%;
+    position: relative;
+}
+
 .block {
     height: 5%;
     width: 100%;
-    padding: 10px 0;
-    padding-left: 15px;
+    padding: 8px 0;
     background-color: transparent;
     transition: background-color 0.4s ease, transform 0.3s ease;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    border-bottom: 1px solid #212121;
 }
 
-.block:hover {
-    background-color: #E0E0E0;
-    transform: scale(1.02);
-    cursor: pointer;
-}
-
-.icon {
-    height: 2rem;
-    width: 1.5rem;
-    object-fit: contain;
+.fijo {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: var(--color-fondo);
 }
 
 .center_text {
@@ -32,7 +29,6 @@
 
 .text {
     margin: 0;
-    margin-left: 5px;
     padding: 0;
 }
 
@@ -47,3 +43,4 @@
     font-size: 1.25vw;
     font-weight: bold;
 }
+
