--- a/frontend/src/components/Comunidades/ComunidadGuardada/ComunidadGuardada.module.css
+++ b/frontend/src/components/Comunidades/ComunidadGuardada/ComunidadGuardada.module.css
@@ -1,25 +1,21 @@
-
 /* ===== Utilidades del Archivo ===== */
 /* === Pensado para todas las resoluciones ===*/
 /* ===== Idealmente ===== */
-.container {
-    height: 5%;
-    width: 100%;
-}
-
 .block {
     height: 5%;
     width: 100%;
     padding: 8px 0;
     background-color: transparent;
     transition: background-color 0.4s ease, transform 0.3s ease;
-    border-bottom: 1px solid #212121;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
-.block:hover {
-    background-color: #E0E0E0;
-    transform: scale(1.02);
-    cursor: pointer;
+.icon {
+    height: 2rem;
+    width: 1.5rem;
+    object-fit: contain;
 }
 
 .center_text {
@@ -28,7 +24,6 @@
 
 .text {
     margin: 0;
-    margin-left: 20px;
     padding: 0;
 }
 
@@ -43,4 +38,3 @@
     font-size: 1.25vw;
     font-weight: bold;
 }
-
