--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,3 +1,6 @@
+
+@import './colores.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.main_hover:hover {
+    background-color: #1b2b47;
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.text_comunidades {
+  margin: 0;
+  padding: 0 50px;
+  color: white;
+  font-weight: bold;
+  font-size: large;
 }
