maquetado a presentar [Lunes-10/11/2025]

--- a/frontend/src/components/Comunidades/Comunidad.module.css
+++ b/frontend/src/components/Comunidades/Comunidad.module.css
@@ -20,7 +20,7 @@
     position: sticky;
     top: 0;
     z-index: 1000;
-    background-color: var(--color-fondo);
+    background-color: rgb(var(--color-fondo-1));
 }
 
 .center_text {
