--- a/frontend/src/pages/Pc-1920x1080/index.module.css
+++ b/frontend/src/pages/Pc-1920x1080/index.module.css
@@ -16,7 +16,7 @@
 }
 
 .sticky_top {
-    background-color: rgba(var(--color-fondo-rgb), 0.975);
+    background-color: rgba(var(--color-fondo-1), 0.957);
     border-bottom: 1px solid #1b2b47;
     position: sticky;
     z-index: 1000;
@@ -27,12 +27,14 @@
     height: 100px;
     width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo {
     height: 100%;
-    width: 100%;
-    object-fit: cover;
+    width: auto;
+    object-fit: contain;
 }
 
 .center_text {
@@ -57,11 +59,11 @@
 /* === Sección Izquierda ===*/
 .user_container {
     width: 100%;
-    background-color: var(--color-fondo);
+    background-color: rgb(var(--color-fondo-1));
 }
 
 .user_data {
-    width: 50%;
+    width: 45%;
     margin: 10px 0 0 50px;
     padding: 10px;
     display: flex;
@@ -87,14 +89,14 @@
 }
 
 .comunidades_block {
-    margin: 10px 0;
+    margin: 0;
     padding: 0;
 }
 
 /* ===== Generales del Archivo ===== */
 /* === Solo para resoluciones 1920x1080 ===*/
 body {
-    background-color: var(--color-fondo);
+    background-color: rgb(var(--color-fondo-1));
 }
 
 ul {
