--- a/frontend/src/styles/colores.css
+++ b/frontend/src/styles/colores.css
@@ -1,5 +1,6 @@
-
 :root {
-    --color-fondo: #121f36;
-    --color-fondo-rgb: 18, 31, 54;
+    --color-fondo-1: 18, 31, 54;
+    --color-fondo-2: 119, 78, 112;
+
+    --color-hover-1: 27, 43, 71;
 }
