--- a/frontend/src/pages/Pc-View/index.module.css
+++ b/frontend/src/pages/Pc-View/index.module.css
@@ -2,7 +2,7 @@
 /* === Solo para resoluciones 1920x1080 ===*/
 .container {
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
     display: flex;
 }
 
@@ -88,9 +88,27 @@
     color: white;
 }
 
+
+/* ===== Comunidades ===== */
+.comunidades_container {
+    min-height: 40px;
+    width: 100%;
+    position: relative;
+}
+
 .comunidades_block {
-    margin: 0;
-    padding: 0;
+        height: 5%;
+    width: 100%;
+    padding: 8px 0;
+    background-color: transparent;
+    transition: background-color 0.4s ease, transform 0.3s ease;
+}
+
+.comunidades_fijo {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: rgb(var(--color-fondo-1));
 }
 
 /* ===== Generales del Archivo ===== */
