--- a/frontend/src/pages/Pc-View/index.module.css
+++ b/frontend/src/pages/Pc-View/index.module.css
@@ -60,17 +60,21 @@
 .user_container {
     width: 100%;
     background-color: rgb(var(--color-fondo-1));
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .user_data {
-    width: 45%;
-    margin: 10px 0 0 50px;
-    padding: 10px;
+    width: 50%;
+    margin: 0 50px;
+    padding: 0.5rem 1rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 12px 3px #1b2b47;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    border-radius: 1rem;
-    box-shadow: 0 0 12px 3px #1b2b47;
     gap: 0.8rem;
 }
 
@@ -91,13 +95,11 @@
 
 /* ===== Comunidades ===== */
 .comunidades_container {
-    min-height: 40px;
-    width: 100%;
     position: relative;
 }
 
 .comunidades_block {
-        height: 5%;
+    height: 5%;
     width: 100%;
     padding: 8px 0;
     background-color: transparent;
@@ -109,6 +111,81 @@
     top: 0;
     z-index: 1000;
     background-color: rgb(var(--color-fondo-1));
+}
+
+/* ===== Crear Publicaciones ===== */
+/* El formulario en sí */
+.formContainer {
+    background: #fff;
+    padding: 25px;
+    width: 380px;
+    border-radius: 12px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+    animation: aparecer 0.25s ease-out forwards;
+}
+
+/* Inputs y textarea */
+.formContainer textarea,
+.formContainer input[type="file"] {
+    width: 100%;
+    padding: 8px;
+    font-size: 15px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+}
+
+/* Contenedor de botones */
+.botonesForm {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+/* Botones */
+.botonesForm button {
+    padding: 10px 18px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.2s;
+}
+
+/* Botón crear */
+.botonesForm button:first-child {
+    background: #007bff;
+    color: white;
+}
+
+.botonesForm button:first-child:hover {
+    background: #0069d9;
+}
+
+/* Botón cancelar */
+.botonesForm button:last-child {
+    background: #ddd;
+}
+
+.botonesForm button:last-child:hover {
+    background: #c7c7c7;
+}
+
+/* Animación suave */
+@keyframes aparecer {
+    from {
+        opacity: 0;
+        transform: translateY(-10px) scale(0.97);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
 }
 
 /* ===== Generales del Archivo ===== */
