creación de la función y formulario [abrirComentarios, agregarComentario]

--- a/frontend/src/pages/Pc-View/index.module.css
+++ b/frontend/src/pages/Pc-View/index.module.css
@@ -168,11 +168,8 @@
 
 /* Botón cancelar */
 .botonesForm button:last-child {
-    background: #ddd;
-}
-
-.botonesForm button:last-child:hover {
-    background: #c7c7c7;
+    color: white;
+    background: #333;
 }
 
 /* Animación suave */
