--- a/frontend/src/components/Sugerencias/sugerencia.module.css
+++ b/frontend/src/components/Sugerencias/sugerencia.module.css
@@ -4,7 +4,7 @@
 /* === Pensado para todas las resoluciones ===*/
 /* ===== Idealmente ===== */
 .block {
-    height: 10%;
+    height: 5rem;
     width: 100%;
     display: flex;
     align-items: center;
