solución conflicto en los estilos

--- a/frontend/src/pages/Pc-View/components/Publicaciones/publicacion.module.css
+++ b/frontend/src/pages/Pc-View/components/Publicaciones/publicacion.module.css
@@ -89,6 +89,6 @@
 /* ===== Generales del Archivo ===== */
 /* === Pensado para todas las resoluciones ===*/
 /* ===== Idealmente ===== */
-li {
+:global(body.pc) li {
     list-style: none;
 }
