--- a/frontend/src/styles/Movil/CreateAlert.module.css
+++ b/frontend/src/styles/Movil/CreateAlert.module.css
@@ -20,7 +20,7 @@
 }
 
 
-h2 {
+:global(body.mobile) h2 {
   text-align: center;
   margin-bottom: 30px;
 }
@@ -33,7 +33,9 @@ h2 {
   align-items: center;
 }
 
+:global(body.mobile)
 input[type="text"],
+:global(body.mobile)
 textarea {
   width: 100%;
   max-width: 340px; /* estrecha y centra visualmente */
