--- a/frontend/src/styles/Movil/Navbar.module.css
+++ b/frontend/src/styles/Movil/Navbar.module.css
@@ -1,5 +1,7 @@
-:root {
-  --nav-blue: linear-gradient(90deg, #2196f3, #1976d2);
+
+@import "../colores.css";
+
+:global(body.mobile) :root {
   --scale: 1; /* evita errores si no está definida */
 }
 
