--- a/frontend/src/styles/colores.css
+++ b/frontend/src/styles/colores.css
@@ -3,4 +3,6 @@
     --color-fondo-2: 119, 78, 112;
 
     --color-hover-1: 27, 43, 71;
+
+    --nav-blue: linear-gradient(90deg, #2196f3, #1976d2);
 }
