--- a/frontend/src/styles/Movil/Sidebar.module.css
+++ b/frontend/src/styles/Movil/Sidebar.module.css
@@ -30,6 +30,10 @@
   left: 0;
 }
 
+:global(body.mobile) .sidebar > h3 {
+  margin-top: 2.5rem;
+}
+
 /* contenido */
 .close {
   background: none;
